[workspace]
members = ["ceres-core", "ceres-gtk"]
default-members = ["ceres-gtk"]
resolver = "2"

[profile.dev]
opt-level = 1
incremental = true
rpath = false

[profile.release]
opt-level = "s"
strip = "symbols"
lto = "fat"
debug = "none"
panic = "abort"
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false
codegen-units = 1
