[workspace]
members = ["ceres-core", "ceres", "ceres-std", "ceres-wgpu"]
default-members = ["ceres"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/remind-me-later/Ceres"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
# std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_union_representation = "warn"
deref_by_slicing = "warn"
else_if_without_else = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
expect_used = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
let_underscore_must_use = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
mem_forget = "warn"
mixed_read_write_in_expression = "warn"
modulo_arithmetic = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
non_ascii_literal = "warn"
panic = "warn"
partial_pub_fields = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
shadow_unrelated = "warn"
str_to_string = "warn"
string_add = "warn"
string_slice = "warn"
string_to_string = "warn"
todo = "warn"
try_err = "warn"
unimplemented = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
use_debug = "warn"
verbose_file_reads = "warn"
unwrap_used = "warn"
large_stack_frames = "warn"
large_stack_arrays = "warn"
cognitive_complexity = "warn"

missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
missing_safety_doc = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
struct_excessive_bools = { level = "allow", priority = 1 }
verbose_bit_mask = { level = "allow", priority = 1 }

[profile.dev]
opt-level = 1
incremental = true
rpath = false

[profile.release]
opt-level = "s"
strip = "symbols"
lto = "fat"
debug = "none"
panic = "abort"
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false
codegen-units = 1
