[package]
name = "ceres-core"
version.workspace = true
edition.workspace = true
description = "A library to make Gameboy/Color emulators"
repository.workspace = true
license.workspace = true

[dependencies]
heapless = "0.8"
tracing = { version = "0.1", default-features = false, features = ["attributes"] }

[dependencies.serde]
version = "*"
default-features = false
features = ["alloc", "derive"]
optional = true

[dev-dependencies]
tracing-test = "0.2"

[features]
default = ["game_genie", "serde"]
game_genie = []
serde = ["dep:serde"]

[lints.clippy]
absolute_paths = "warn"
alloc_instead_of_core = "warn"
allow_attributes = "warn"
arbitrary_source_item_ordering = "warn"
as_pointer_underscore = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
big_endian_bytes = "warn"
cfg_not_test = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
# default_numeric_fallback = "warn"
default_union_representation = "warn"
deref_by_slicing = "warn"
doc_include_without_cfg = "warn"
else_if_without_else = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
exhaustive_enums = "warn"
exhaustive_structs = "warn"
exit = "warn"
expect_used = "warn"
field_scoped_visibility_modifiers = "warn"
filetype_is_file = "warn"
float_arithmetic = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
get_unwrap = "warn"
host_endian_bytes = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
infinite_loop = "warn"
# integer_division = "warn"
iter_over_hash_type = "warn"
large_stack_arrays = "warn"
large_stack_frames = "warn"
let_underscore_must_use = "warn"
let_underscore_untyped = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
map_with_unused_argument_over_ranges = "warn"
mem_forget = "warn"
missing_assert_message = "warn"
missing_asserts_for_indexing = "warn"
missing_inline_in_public_items = "warn"
mixed_read_write_in_expression = "warn"
module_name_repetitions = "warn"
modulo_arithmetic = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
needless_raw_strings = "warn"
non_ascii_literal = "warn"
non_zero_suggestions = "warn"
nursery = "warn"
panic = "warn"
# panic_in_result_fn = "warn"
partial_pub_fields = "warn"
# pattern_type_mismatch = "warn"
pedantic = "warn"
pointer_format = "warn"
precedence_bits = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
semicolon_inside_block = "warn"
shadow_unrelated = "warn"
str_to_string = "warn"
string_add = "warn"
string_slice = "warn"
struct_excessive_bools = "warn"
todo = "warn"
try_err = "warn"
unimplemented = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"
use_debug = "warn"
verbose_file_reads = "warn"

[lints.rust]
unsafe_code = "forbid"
