[package]
name = "ceres-egui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies.ceres-std]
path = "../ceres-std"
features = ["wgpu_renderer"]

[dependencies.anyhow]
version = "*"

[dependencies.directories]
version = "*"

[dependencies.eframe]
version = "0.31"
default-features = false
features = ["default_fonts", "wgpu", "wayland", "accesskit"]

[dependencies.winit]
version = "*"

[dependencies.rfd]
version = "*"
