[package]
name = "ceres-egui"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies.anyhow]
version = "*"

[dependencies.ceres-std]
features = ["wgpu_renderer"]
path = "../ceres-std"

[dependencies.directories]
version = "*"

[dependencies.eframe]
version = "*"
default-features = false
features = ["accesskit", "default_fonts", "wayland", "wgpu"]

[dependencies.rfd]
version = "*"

[dependencies.winit]
version = "*"

[lints]
workspace = true
