[package]
name = "ceres-egui"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies.anyhow]
version = "*"

[dependencies.ceres-std]
path = "../ceres-std"
features = ["cli", "wgpu_renderer"]

[dependencies.directories]
version = "*"

[dependencies.eframe]
version = "*"
default-features = false
features = ["default_fonts", "accesskit", "wayland", "wgpu"]

[dependencies.rfd]
version = "*"

[dependencies.winit]
version = "*"

[lints]
workspace = true
