[package]
name = "ceres-glfw"
version = "0.1.0"
edition = "2021"
description = "A Gameboy/Color emulator"

[dependencies]
ceres-core = { path = "../ceres-core" }
ceres-cpal = { path = "../ceres-cpal" }
ceres-opengl = { path = "../ceres-opengl" }
glfw = { version = "*", default-features = false }
env_logger = "*"
colorful = "*"
clap = { version = "*", default-features = false, features = ["std"] }
log = "*"
