[package]
name = "ceres-glutin"
version = "0.1.0"
edition = "2021"
description = "A Gameboy/Color emulator"

[dependencies]
ceres-core = { path = "../ceres-core" }
ceres-cpal = { path = "../ceres-cpal" }
ceres-opengl = { path = "../ceres-opengl" }
glutin = "*"
simplelog = "*"
colorful = "*"
clap = { version = "*", default-features = false, features = ["std"] }
log = "*"
