[package]
name = "ceres-gtk"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ceres-std = { path = "../ceres-std", features = [
  "cli",
  "game_genie",
  "screenshot",
] }
epoxy = { version = "*" }
glow = { version = "*" }
libloading = { version = "*" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"

[dependencies.adw]
package = "libadwaita"
version = "*"
default-features = false
features = ["v1_5"]

[dependencies.gtk]
package = "gtk4"
version = "*"
default-features = false
features = ["v4_10"]

[lints.clippy]
allow_attributes = "warn"
arbitrary_source_item_ordering = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_union_representation = "warn"
deref_by_slicing = "warn"
else_if_without_else = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
# expect_used = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
let_underscore_must_use = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
mem_forget = "warn"
mixed_read_write_in_expression = "warn"
modulo_arithmetic = "warn"
mutex_atomic = "warn"
nursery = "warn"
# panic = "warn"
partial_pub_fields = "warn"
# print_stderr = "warn"
# print_stdout = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
# same_name_method = "warn"
self_named_module_files = "warn"
# shadow_unrelated = "warn"
str_to_string = "warn"
string_add = "warn"
string_slice = "warn"
struct_excessive_bools = "warn"
todo = "warn"
try_err = "warn"
unimplemented = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
use_debug = "warn"
verbose_file_reads = "warn"
