[package]
name = "ceres-iced"
version = "0.1.0"
edition = "2021"

[dependencies.iced]
version = "*"
features = ["advanced", "wgpu"]

[dependencies.directories]
version = "*"

# Required for wgpu safe byte manipulation
[dependencies.bytemuck]
version = "*"
default-features = false

# *********
# * Audio *
# *********

[dependencies.cpal]
version = "*"
default-features = false

[dependencies.dasp_ring_buffer]
version = "*"
default-features = false

# *******************
# * Emulator thread *
# *******************

[dependencies.ceres-core]
path = "../ceres-core"

[dependencies.thread-priority]
version = "*"
default-features = false

[dependencies.spin_sleep]
version = "*"
default-features = false
