[package]
name = "ceres-ndk"
version.workspace = true
edition.workspace = true
description = "NDK bindings for Ceres"
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]
name = "ceres_jni"

[dependencies]
android_logger = "*"
android-activity = { version = "*", features = ["native-activity"] }
anyhow = "*"
ceres-core = { path = "../ceres-core" }
ceres-std = { path = "../ceres-std", features = ["game_genie", "wgpu_renderer"] }
jni = "*"
log = "*"
ndk = { version = "*", features = ["rwh_06"] }
raw-window-handle = "0.6"

[dependencies.pollster]
version = "*"
default-features = false

[features]
default = ["game_genie"]
game_genie = ["ceres-core/game_genie", "ceres-std/game_genie"]

[lints.clippy]
alloc_instead_of_core = "warn"
allow_attributes = "warn"
arbitrary_source_item_ordering = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
cognitive_complexity = "warn"
create_dir = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_union_representation = "warn"
deref_by_slicing = "warn"
else_if_without_else = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
expect_used = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
large_stack_arrays = "warn"
large_stack_frames = "warn"
let_underscore_must_use = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
mem_forget = "warn"
mixed_read_write_in_expression = "warn"
modulo_arithmetic = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
non_ascii_literal = "warn"
nursery = "warn"
panic = "warn"
partial_pub_fields = "warn"
pedantic = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
shadow_unrelated = "warn"
str_to_string = "warn"
string_add = "warn"
string_slice = "warn"
string_to_string = "warn"
todo = "warn"
try_err = "warn"
unimplemented = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unwrap_used = "warn"
use_debug = "warn"
verbose_file_reads = "warn"
