[package]
name = "ceres-std"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies.bytemuck]
version = "*"
default-features = false

[dependencies.ceres-core]
path = "../ceres-core"

[dependencies.clap]
version = "*"
default-features = false
features = ["derive", "help", "std"]
optional = true

[dependencies.cpal]
git = "https://github.com/RustAudio/cpal.git"
rev = "5dd648ee8564d3d0ed77c60c95246425dbeebd10"

[dependencies.gilrs]
version = "*"

[dependencies.image]
version = "*"
default-features = false
features = ["webp"]
optional = true

[dependencies.ringbuf]
version = "*"
default-features = false
features = ["std"]

[dependencies.rubato]
version = "*"
default-features = false

[dependencies.spin_sleep]
version = "*"
default-features = false

[dependencies.thread-priority]
version = "*"
default-features = false

[dependencies.wgpu]
version = "27"
default-features = false
features = ["dx12", "metal", "vulkan", "wgsl"]
optional = true

[features]
cli = ["dep:clap"]
game_genie = ["ceres-core/game_genie"]
screenshot = ["dep:image"]
wgpu_renderer = ["dep:wgpu"]

[lints]
workspace = true
