[package]
name = "ceres-test-runner"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
anyhow = "1.0"
ceres-core = { path = "../ceres-core" }
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
anyhow = "1.0"

[lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "allow"
nursery = "warn"
pedantic = "warn"
