[package]
name = "ceres-test-runner"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-chrome = "0.7"
ceres-core = { path = "../ceres-core" }
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
ceres-std = { version = "0.1.0", path = "../ceres-std" }

[build-dependencies]
anyhow = "1.0"

[lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "allow"
nursery = "warn"
pedantic = "warn"
