[package]
name = "ceres-wgpu"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies.wgpu]
version = "24"
default-features = false
features = ["dx12", "metal", "wgsl"]

[dependencies.bytemuck]
version = "*"
default-features = false
