[package]
name = "ceres-winit"
version.workspace = true
edition.workspace = true
description = "An experimental GameBoy emulator"
repository.workspace = true
license.workspace = true

[package.metadata.bundle]
name = "Ceres"
identifier = "com.github.remind-me-later.ceres"
category = "public.app-category.games"

[dependencies.anyhow]
version = "*"

[dependencies.ceres-std]
path = "../ceres-std"
features = ["cli", "wgpu_renderer"]

[dependencies.directories]
version = "*"

[dependencies.pollster]
version = "*"
default-features = false

[dependencies.rfd]
version = "*"

[dependencies.winit]
version = "*"
default-features = false
features = ["rwh_06", "wayland", "wayland-csd-adwaita"]

[lints]
workspace = true