[package]
name = "ceres"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies.clap]
version = "*"
default-features = false
features = ["std", "derive"]

[dependencies.anyhow]
version = "*"

[dependencies.directories]
version = "*"

[dependencies.ceres-core]
path = "../ceres-core"

[dependencies.eframe]
version = "*"
default-features = false
features = ["default_fonts", "wgpu", "wayland", "accesskit"]

[dependencies.winit]
version = "*"
default-features = false
features = ["wayland", "wayland-csd-adwaita", "rwh_06"]

[dependencies.rfd]
version = "*"

# Required for wgpu safe byte manipulation
[dependencies.bytemuck]
version = "*"
default-features = false

[dependencies.ceres-std]
path = "../ceres-std"
