[package]
name = "ceres"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies.clap]
version = "*"
default-features = false
features = ["std", "derive", "help"]

[dependencies.anyhow]
version = "*"

[dependencies.directories]
version = "*"

[dependencies.ceres-std]
path = "../ceres-std"

[dependencies.ceres-wgpu]
path = "../ceres-wgpu"

[dependencies.winit]
version = "*"
default-features = false
features = ["rwh_06", "wayland", "wayland-csd-adwaita"]

[dependencies.wgpu]
version = "*"
default-features = false
features = ["dx12", "metal", "wgsl"]

[dependencies.pollster]
version = "*"
default-features = false

[target.'cfg(target_os = "macos")'.dependencies.objc2-app-kit]
git = "https://github.com/madsmtm/objc2.git"

[target.'cfg(target_os = "macos")'.dependencies.objc2-foundation]
git = "https://github.com/madsmtm/objc2.git"
default-features = true
features = ["alloc"]

[target.'cfg(target_os = "macos")'.dependencies.objc2]
git = "https://github.com/madsmtm/objc2.git"
default-features = true
features = ["std"]

[lints.clippy]
pedantic = "warn"
nursery = "warn"
# std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_union_representation = "warn"
deref_by_slicing = "warn"
else_if_without_else = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
expect_used = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
let_underscore_must_use = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
mem_forget = "warn"
mixed_read_write_in_expression = "warn"
modulo_arithmetic = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
non_ascii_literal = "warn"
panic = "warn"
partial_pub_fields = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
shadow_unrelated = "warn"
str_to_string = "warn"
string_add = "warn"
string_slice = "warn"
string_to_string = "warn"
todo = "warn"
try_err = "warn"
unimplemented = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
use_debug = "warn"
verbose_file_reads = "warn"
unwrap_used = "warn"
large_stack_frames = "warn"
large_stack_arrays = "warn"
cognitive_complexity = "warn"
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
missing_safety_doc = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
struct_excessive_bools = { level = "allow", priority = 1 }
verbose_bit_mask = { level = "allow", priority = 1 }
