[package]
name = "ceres_glutin"
version = "0.1.0"
license = "MIT"
edition = "2021"
description = "A Gameboy/Color emulator"

[dependencies]
ceres_core = { path = "../ceres_core" }
glutin = "*"
glow = "*"
cpal = "*"
dasp_ring_buffer = "*"
parking_lot = "*"
clap = { version = "*", features = ["derive"] }
rfd = { version = "*", default-features = false, features = ["xdg-portal"] }
