[package]
name = "ceres_gtk"
version = "0.1.0"
edition = "2021"

[dependencies]
ceres_core = { path = "../ceres_core" }
clap = { version = "*", default-features = false, features = ["std", "help"] }
epoxy = { version = "*" }
libloading = { version = "*" }
glow = { version = "*" }

# audio
cpal = { version = "*", default-features = false }

[dependencies.adw]
package = "libadwaita"
version = "*"
features = ["v1_4"]

[dependencies.gtk]
version = "*"
package = "gtk4"
features = ["v4_12"]
