[package]
name = "ceres_sdl"
version = "0.1.0"
license = "MIT"
edition = "2021"
description = "A Gameboy/Color emulator"

[dependencies]
ceres_core = { path = "../ceres_core" }
clap = { version = "*", default-features = false, features = ["std", "help"] }
sdl2 = { version = "*", default-features = false }
# sdls audio is not that good
cpal = "*"
