[workspace]
members = ["ceres_core", "ceres_front"]
default-members = ["ceres_front"]
resolver = "2"

[profile.dev]
opt-level = 1
incremental = true
rpath = false

[profile.release]
opt-level = 3
strip = true
lto = true
debug = false
panic = "abort"
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1
rpath = false
