[package]
name = "ceres"
version = "0.1.0"
license = "MIT"
edition = "2021"
description = "A Gameboy/Color emulator"

[dependencies]
ceres_core = { path = "../ceres_core" }
clap = { version = "*", default-features = false, features = ["std", "help"] }
parking_lot = { version = "*", default-features = false }
anyhow = { version = "*", default-features = false, features = ["std"] }

# audio
cpal = { version = "*", default-features = false }

# video
wgpu = { version = "*", default-features = false, features = ["spirv"] }
pollster = { version = "*", default-features = false }
bytemuck = { version = "*", default-features = false, features = ["derive"] }
# TODO: wait for better wayland decoration support
winit = { version = "*", default-features = false, features = ["x11"] }

# screenshots
image = { version = "*", default-features = false, features = [
    "png",
], optional = true }
chrono = { version = "*", default-features = false, features = [
    "clock",
], optional = true }

[features]
screenshot = ["image", "chrono"]
