[package]
name = "ceres_front"
version = "0.1.0"
license = "MIT"
edition = "2021"
description = "A Gameboy/Color emulator"

[dependencies]
ceres_core = { path = "../ceres_core" }
clap = { version = "*", default-features = false, features = ["std", "help"] }
cpal = { version = "*", default-features = false }
parking_lot = "*"
wgpu = "*"
winit = "*"
pollster = { version = "*", default-features = false }
bytemuck = { version = "*", features = ["derive"] }
